--- a/.travis.yml
+++ b/.travis.yml
@@ -5,18 +5,7 @@ go: 1.7.x
 sudo: false
 
 install:
-    - |
-        GB_VERSION=$(awk '$1 == "ENV" && $2 == "GB_VERSION" { print $3; exit }' Dockerfile)
-        firstGo="${GOPATH%%:*}"
-        mkdir -p "$firstGo/src/github.com/constabulary"
-        (
-            cd "$firstGo/src/github.com/constabulary"
-            wget -qO- "https://github.com/constabulary/gb/archive/v${GB_VERSION}.tar.gz" \
-                | tar -xz
-            mv gb-* gb
-            cd gb
-            go install -v ./...
-        )
+    - go get -v -u github.com/constabulary/gb/...
 
 before_script:
     - env | sort
