Swap to "tcp" so we can test "https" too and use "--connect-to" to MITM _all_ curl destinations

--- a/test/tests/haproxy-basics/haproxy.cfg
+++ b/test/tests/haproxy-basics/haproxy.cfg
@@ -1,10 +1,13 @@
 defaults
-	mode http
+	mode tcp
 	timeout connect 5000ms
 	timeout client 50000ms
 	timeout server 50000ms
 frontend http-in
 	bind *:80
-	default_backend google
-backend google
-	server google0 www.google.com
+	default_backend example
+frontend https-in
+	bind *:443
+	default_backend example
+backend example
+	server example0 example.com
