Add "gpgconf --kill all" to bashbrew build Dockerfile (partially as a test for other images)
This helps combat the following race condition:

    + rm -rf /tmp/tmp.FHddOB
    rm: can't remove '/tmp/tmp.FHddOB/S.gpg-agent.browser': No such file or directory

--- a/bashbrew/Dockerfile.release
+++ b/bashbrew/Dockerfile.release
@@ -51,7 +51,8 @@ RUN set -euxo pipefail; \
 		) \
 	done; \
 	\
-	rm -rf "$GNUPGHOME"; \
+	gpgconf --kill all; \
+	rm -r "$GNUPGHOME"; \
 	\
 	ls -lAFh bin/manifest-tool-*; \
 	file bin/manifest-tool-*
