--- a/bashbrew/Dockerfile.release
+++ b/bashbrew/Dockerfile.release
@@ -1,9 +1,8 @@
-FROM golang:1.9-alpine
+FROM golang:1.10-alpine3.8
 
 RUN apk add --no-cache \
 		file \
-		gnupg \
-		libressl
+		gnupg
 
 WORKDIR /usr/src/bashbrew
 ENV GOPATH /usr/src/bashbrew:/usr/src/bashbrew/vendor
