--- a/bashbrew/Dockerfile.release
+++ b/bashbrew/Dockerfile.release
@@ -1,4 +1,4 @@
-FROM golang:1.10-alpine3.8
+FROM golang:1.12-alpine3.9
 
 RUN apk add --no-cache \
 		file \
@@ -23,7 +23,7 @@ ENV BASHBREW_ARCHES \
 COPY .bashbrew-arch-to-goenv.sh /usr/local/bin/
 
 # https://github.com/estesp/manifest-tool/releases
-ENV MANIFEST_TOOL_VERSION 0.9.0
+ENV MANIFEST_TOOL_VERSION 1.0.0-rc
 # gpg: key 0F386284C03A1162: public key "Philip Estes <estesp@gmail.com>" imported
 ENV MANIFEST_TOOL_GPG_KEY 27F3EA268A97867EAF0BD05C0F386284C03A1162
 
