--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: go
 go: 1.12.x
 
-before_script:
-    - env | sort
+install:
     - ./bashbrew/bashbrew.sh --help > /dev/null
     - export PATH="$PWD/bashbrew/go/bin:$PATH"
+
+before_script:
+    - env | sort
 
 script:
     - ./bashbrew/travis.sh
